--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Android ###
 # Built application files
 *.apk
 *.ap_
@@ -35,6 +36,13 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
+.idea/libraries
 
 # Keystore files
 *.jks
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+### Android Patch ###
+gen-external-apklibs
