--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".CropAndRotate" />
         <activity android:name=".Binarization" />
+        <activity android:name=".Recognizer" />
     </application>
 
 
