--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,14 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'io.fabric.tools:gradle:1.25.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +22,9 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
