--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,19 @@ android {
         targetSdkVersion 26
         versionCode 3
         versionName "1.2"
+
+        buildConfigField 'String', 'AdMobAppId', '"ca-app-pub-3940256099942544~3347511713"'
+        resValue 'string', 'admob_app_id', '"ca-app-pub-3940256099942544~3347511713"'
+        resValue 'string', 'admob_unit_id', 'ca-app-pub-3940256099942544/6300978111"'
     }
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'AdMobAppId', TextScanner_AdMobAppId
+            resValue 'string', 'admob_app_id', TextScanner_AdMobAppId
+            resValue 'string', 'admob_unit_id', TextScanner_AdMobUnitId
         }
     }
 }
@@ -26,10 +33,11 @@ dependencies {
     implementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.rmtheis:tess-two:6.0.4'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
